--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,14 @@
 {
-    "env": {
-        "es6": true,
-        "browser": true
-    },
-    "extends": [
-        "eslint:recommended"
-    ],
-    "rules": {
-        "quotes": ["error", "single"]
-    }
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jquery": true,
+    "commonjs": true,
+  },
+  "extends": [
+    "eslint:recommended"
+  ],
+  "rules": {
+    "quotes": ["error", "single"]
   }
+}
